--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
 		"@tauri-apps/cli": "^1.2.2",
 		"@types/node": "^18.7.10",
 		"@vitejs/plugin-vue": "^4.0.0",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"sass": "^1.57.1",
+		"tailwindcss": "^3.2.4",
 		"typescript": "^4.6.4",
 		"vite": "^4.0.0",
 		"vue-tsc": "^1.0.11"
