--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,8 @@ tauri-build = { version = "1.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["shell-open"] }
-reqwest = "0.11.13"
+reqwest = { version = "0.11.13", features = ["json"] }
+thiserror = "1.0.38"
 
 [features]
 # by default Tauri runs in production mode
