--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@tauri-apps/api": "^1.2.0",
+		"http-status-codes": "^2.2.0",
 		"vue": "^3.2.45",
 		"vue-router": "^4.1.6"
 	},
