--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "vue-tsc --noEmit && vite build",
 		"preview": "vite preview",
+		"prettier": "prettier --write .",
 		"tauri": "tauri"
 	},
 	"dependencies": {
@@ -19,10 +20,6 @@
 		"@tauri-apps/cli": "^1.2.2",
 		"@types/node": "^18.7.10",
 		"@vitejs/plugin-vue": "^4.0.0",
-		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.21",
-		"sass": "^1.57.1",
-		"tailwindcss": "^3.2.4",
 		"typescript": "^4.6.4",
 		"vite": "^4.0.0",
 		"vue-tsc": "^1.0.11"
